<resources>
    <string name="app_name">Quality-Of-Air-Monitoring</string>
    <string name="bottom_navigation_menu_addresses">Addresses</string>
    <string name="bottom_navigation_menu_monitoring">Monitoring</string>
    <string name="bottom_navigation_menu_history">History</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_account">AccountActivity</string>

    <!-- Strings used for fragments for login and register fragments -->
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">It\'s time for a healthy home \nJoin us and start today !</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>

    <!-- Strings user for login and registering validation -->
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter valid Email</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration successful !</string>
    <string name="error_email_exists">Email already exists</string>
    <string name="error_password_match">Passwords does not match</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="chart_description1">Set Bar Chart Description Here</string>

    <!-- -->
    <string name="humidity">Current humidity</string>
    <string name="temperature">Current temperature</string>
</resources>